--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "create_species_dataset( root_folder = /data/projects/biodt/storage/data/Life, filepath = /data/projects/biodt/storage/processed_data/species_dataset.parquet, start_year: int = 2000, end_year: int = 2020) "
+    "create_species_dataset( root_folder = /data/projects/biodt/storage/data/Life, filepath = /data/projects/biodt/storage/processed_data/species_dataset_2.parquet, start_year: int = 2000, end_year: int = 2020) "
    ]
   },
   {
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "you change the location in def create_batches() which now is Europe :"
+    "you change the location in def initialize_data() in the file create dataset. which now is Europe :"
    ]
   },
   {
@@ -422,6 +422,20 @@
     "Modality folders contain txt files which shows which folders contain which modalities. Is produced by command in terminal, run once, there is no code. It should be updated.\n",
     "\n",
     "Processed data contains labels mapping, timestamps extracted from species dataset. And the species dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODOs Priorities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sparse tensors on create batches "
    ]
   }
  ],
