--- a/documentation.ipynb
+++ b/documentation.ipynb
@@ -193,7 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is all the files with preprocessing functions, there are comments, for images, sounds, text, edna. This fiel preprocessing is the important one with combines all the other files in general functions , which used when we create the species dataset parquet file."
+    "Here is all the files with preprocessing functions, there are comments, for images, sounds, text, edna. This fiel preprocessing is the important one with combines all the other files in general functions , which used when we create the species dataset parquet file. Below we highlight the workflow in a schematic.\n",
+    "\n",
+    "![Alt text](img/data_init.png \"BioCube Data Acquistion and Preprocessing\")\n"
    ]
   },
   {
@@ -214,9 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most important part.\n",
+    "![Alt text](img/species_data.png \"BioCube Creation\")\n",
     "\n",
-    "Firstly we have to create the species dataset. Now we dont put all the images and the sounds inside.\n",
+    "Firstly we have to create the species dataset as show in the picture above. Now we dont put all the images and the sounds inside.\n",
     "All the species data are located /data/projects/biodt/storage/data/Life. \n",
     "\n",
     "For now is one species dataset which is not totally wrong, but some distributions have not been saved. /data/projects/biodt/storage/processed_data/species_dataset.parquet\n",
@@ -256,7 +258,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Batch Creation"
+    "#### Batch Creation\n",
+    "\n",
+    "![Alt text](img/data_batch.png \"BioCube Data Batch\")\n"
    ]
   },
   {
